@@ -1,19 +1,0 @@
-project (amarok1_mediaplayer)
-
-cmake_minimum_required (VERSION 2.8)
-
-find_package (Kadu REQUIRED CONFIG)
-
-set (SOURCES
-	amarok.cpp
-)
-
-set (MOC_SOURCES
-	amarok.h
-)
-
-kadu_plugin (amarok1_mediaplayer
-	PLUGIN_SOURCES ${SOURCES}
-	PLUGIN_MOC_SOURCES ${MOC_SOURCES}
-	PLUGIN_DEPENDENCIES mediaplayer
-)
