@@ -1,10 +1,0 @@
-[Module]
-DisplayName=amaroK 1.x integration
-DisplayName[pl]=Integracja z amaroK 1.x
-Description=Integrates Kadu with amaroK 1.x media player
-Description[pl]=Integruje Kadu z odtwarzaczem amaroK 1.x
-Author=Googie, Vogel, Dorr
-Provides=media_player
-Dependencies=mediaplayer
-Version=core
-Category=Media players
